--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>我喜欢你❤</title>
+<title>521我爱你❤</title>
 <!-- style -->
 <link type="text/css" rel="stylesheet" href="css/theme.css">
 <script src="js/jquery-2.0.3.min.js"></script>
@@ -130,7 +130,7 @@ var record_json = {
 console.log(record_json);
 
 
-var main_title = '我喜欢你❤️';
+var main_title = '521我爱你❤';
 // console.log(main_title);
 if (main_title == '' || main_title == 'null') { //允许标题为空
 	document.title = '慢慢喜欢你';
