--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ console.log(record_json);
 
 var main_title = '521我爱你❤';
 // console.log(main_title);
-if (main_title == '' || main_title == 'null') { //允许标题为空
+if (main_title == '' || main_title == 'null') { //
 	document.title = '慢慢喜欢你';
 }
 
